test/expected/readonly_rejects_reassignment.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "readonly" "R=5"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "R=$R"]
  [CompoundListCondition, None]
    [Assign R=9]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "after=$R"]
[Word
  Unquoted "readonly"
]
[Word
  Unquoted "R=5"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "R="
  Variable "R"
]
[Word
  Unquoted "R=9"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "after="
  Variable "R"
]
R=5
shit: 4:1: error: Unable to assign 'R' because it is read only.
     4 |  R=9
       |  ^~~ here.
